--- a/src/FlintEditor.mxml
+++ b/src/FlintEditor.mxml
@@ -21,30 +21,30 @@
 	</mx:Canvas>
 	<mx:TabNavigator x="529" y="7" width="269" height="666">
 		<mx:Canvas label="Initials" width="100%" height="100%">
-			<ns1:ZoneCanvas x="4" y="379" id="zoneCanvas" creationComplete="zoneCanvas.init()">
-			</ns1:ZoneCanvas>
-			<ns1:InitialsCanvas x="3.5" y="0" id="initialsCanvas" creationComplete="initialsCanvas.init()">
-			</ns1:InitialsCanvas>
+			<views:ZoneCanvas x="4" y="379" id="zoneCanvas" creationComplete="zoneCanvas.init()">
+			</views:ZoneCanvas>
+			<views:InitialsCanvas x="3.5" y="0" id="initialsCanvas" creationComplete="initialsCanvas.init()">
+			</views:InitialsCanvas>
 		</mx:Canvas>
 		<mx:Canvas label="Actions" width="100%" height="100%">
-			<ns1:ActionsCanvas x="3" y="10" id="actionsCanvas" creationComplete="actionsCanvas.inits()">
-			</ns1:ActionsCanvas>
+			<views:ActionsCanvas x="3" y="10" id="actionsCanvas" creationComplete="actionsCanvas.inits()">
+			</views:ActionsCanvas>
 		</mx:Canvas>
 		<mx:Canvas label="Filters" width="100%" height="100%">
-			<ns1:FilterCanvas x="3" y="2" id="filterCanvas" creationComplete="filterCanvas.init()">
-			</ns1:FilterCanvas>
+			<views:FilterCanvas x="3" y="2" id="filterCanvas" creationComplete="filterCanvas.init()">
+			</views:FilterCanvas>
 		</mx:Canvas>
 	</mx:TabNavigator>
-	<ns1:RendererCanvas x="0" y="442" id="rendererCanvas" creationPolicy="all" creationComplete="rendererCanvas.init()">
-	</ns1:RendererCanvas>
+	<views:RendererCanvas x="0" y="442" id="rendererCanvas" creationPolicy="all" creationComplete="rendererCanvas.init()">
+	</views:RendererCanvas>
 	<mx:ApplicationControlBar x="195" y="0" id="gui_appControlBar" dock="true" height="25" paddingBottom="0" paddingTop="0">
 		<mx:MenuBar id="gui_appMenuBar" labelField="@label"/>
 	</mx:ApplicationControlBar>
 	<mx:TabNavigator x="232" y="442" width="160" height="231" creationPolicy="all">
-		<ns1:CounterCanvas label="Counter" width="100%" height="100%"  id="counterCanvas" creationComplete="counterCanvas.init()"/>
-		<ns1:EmitterCanvas label="Emitters" width="100%" height="100%"  id="emitterCanvas" creationComplete="emitterCanvas.init()"/>
+		<views:CounterCanvas label="Counter" width="100%" height="100%"  id="counterCanvas" creationComplete="counterCanvas.init()"/>
+		<views:EmitterCanvas label="Emitters" width="100%" height="100%"  id="emitterCanvas" creationComplete="emitterCanvas.init()"/>
 	</mx:TabNavigator>
-	<ns1:BackgroundCanvas x="392" y="442" id="backgroundCanvas" creationComplete="backgroundCanvas.init(gui_mainCanvas)">
-	</ns1:BackgroundCanvas>
+	<views:BackgroundCanvas x="392" y="442" id="backgroundCanvas" creationComplete="backgroundCanvas.init(gui_mainCanvas)">
+	</views:BackgroundCanvas>
 
 </mx:Application>
