--- a/src/main/views/RendererCanvas.mxml
+++ b/src/main/views/RendererCanvas.mxml
@@ -24,7 +24,7 @@
 				<mx:List x="10" y="30" height="84" width="133" id="_imagesList" doubleClickEnabled="true"></mx:List>
 			</mx:AddChild>
 			<mx:AddChild position="lastChild">
-				<mx:Button x="152" y="32" label="add" id="_addImage" click="onAddImage()" enabled="false"/>
+				<mx:Button x="152" y="32" label="add" id="_addImage" click="onAddImage()"/>
 			</mx:AddChild>
 			<mx:AddChild position="lastChild" creationPolicy="all">
 				<mx:Button x="151" y="62" label="remove" id="_removeImage" enabled="false" click="onRemoveImage()"/>
@@ -44,7 +44,7 @@
 			</mx:AddChild>
 		</mx:State>
 	</mx:states>
-	<mx:Script source="control/RendererControl.as" />
+	<mx:Script source="controllers/RendererControl.as" />
 	<mx:RadioButtonGroup id="_rendererType"/>
 	<mx:RadioButton x="10" y="5" label="pixel" groupName="_rendererType" click="onSelectRenderer(&quot;pixel&quot;)" selected="true" enabled="false" id="_radioPixel"/>
 	<mx:RadioButton x="70" y="5" label="bitmap" groupName="_rendererType" click="onSelectRenderer(&quot;bitmap&quot;)" id="_radioBitmap"/>
