--- a/src/main/views/BackgroundCanvas.mxml
+++ b/src/main/views/BackgroundCanvas.mxml
@@ -21,7 +21,7 @@
 	<mx:Label x="10" y="10" text="Background" fontWeight="bold"/>
 	<mx:Label x="10" y="24" text="color" fontStyle="italic"/>
 	<mx:Label x="10" y="157" text="image" fontStyle="italic"/>
-	<mx:Button x="6" y="174" label="load" id="_loadImage" click="onLoadImage()"/>
+	<mx:Button x="6" y="174" label="load" id="_loadImage" click="onLoadImage()" enabled="false"/>
 	<mx:Button x="60" y="174" label="unload" enabled="false" id="_unloadImage" click="onUnloadImage()"/>
 	<views:GroupCheckBox x="13" y="198" id="_groupCheckImgMove" label="mouse move" enabled="false"/>
 	
