--- a/branches/web/src/FlintEditor.mxml
+++ b/branches/web/src/FlintEditor.mxml
@@ -17,9 +17,9 @@
 -->
 <mx:Application xmlns:mx="http://www.adobe.com/2006/mxml" layout="absolute" width="805" height="720" creationPolicy="all" creationComplete="init()" xmlns:ns1="main.components.*" viewSourceURL="srcview/index.html" xmlns:views="main.views.*">
 <mx:Script source="Editor.as" />
-	<mx:Canvas x="0" y="4" width="530" height="430" id="gui_mainCanvas" borderStyle="inset" borderColor="#A69E9E">
+	<mx:Canvas x="0" y="4" width="530" height="430" id="_mainCanvas" borderStyle="inset" borderColor="#A69E9E">
 	</mx:Canvas>
-	<mx:TabNavigator x="529" y="7" width="269" height="666">
+	<mx:TabNavigator id="acfTab" x="529" y="7" width="269" height="666">
 		<mx:Canvas label="Initials" width="100%" height="100%">
 			<views:ZoneCanvas x="4" y="379" id="zoneCanvas" creationComplete="zoneCanvas.init()">
 			</views:ZoneCanvas>
@@ -30,21 +30,21 @@
 			<views:ActionsCanvas x="3" y="10" id="actionsCanvas" creationComplete="actionsCanvas.inits()">
 			</views:ActionsCanvas>
 		</mx:Canvas>
-		<mx:Canvas label="Filters" width="100%" height="100%">
+		<mx:Canvas id="Filters" label="Filters" width="100%" height="100%">
 			<views:FilterCanvas x="3" y="2" id="filterCanvas" creationComplete="filterCanvas.init()">
 			</views:FilterCanvas>
 		</mx:Canvas>
 	</mx:TabNavigator>
 	<views:RendererCanvas x="0" y="442" id="rendererCanvas" creationPolicy="all" creationComplete="rendererCanvas.init()">
 	</views:RendererCanvas>
-	<mx:ApplicationControlBar x="195" y="0" id="gui_appControlBar" dock="true" height="25" paddingBottom="0" paddingTop="0">
-		<mx:MenuBar id="gui_appMenuBar" labelField="@label"/>
+	<mx:ApplicationControlBar x="195" y="0" id="_appControlBar" dock="true" height="25" paddingBottom="0" paddingTop="0">
+		<mx:MenuBar id="_appMenuBar" labelField="@label"/>
 	</mx:ApplicationControlBar>
 	<mx:TabNavigator x="232" y="442" width="160" height="231" creationPolicy="all">
 		<views:CounterCanvas label="Counter" width="100%" height="100%"  id="counterCanvas" creationComplete="counterCanvas.init()"/>
 		<views:EmitterCanvas label="Emitters" width="100%" height="100%"  id="emitterCanvas" creationComplete="emitterCanvas.init()"/>
 	</mx:TabNavigator>
-	<views:BackgroundCanvas x="392" y="442" id="backgroundCanvas" creationComplete="backgroundCanvas.init(gui_mainCanvas)">
+	<views:BackgroundCanvas x="392" y="442" id="backgroundCanvas" creationComplete="backgroundCanvas.init(_mainCanvas)">
 	</views:BackgroundCanvas>
 
 </mx:Application>
